--- a/Html.fun/index.html
+++ b/Html.fun/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en">
+    <title> CatFishApp</title> 
  <body>
         <h1>CatFishApp</h1> 
         <main> 
@@ -14,7 +15,7 @@
             <ul>
                 <li>cat nip</li>
                 <li>laser pointers</li>
-                <li>lasagna</li>
+                <li>lasagna</li> 
             </ul>
             <img src="lasagna.jpg" alt="lasagna" width="300" height="200">
             <p> Things cats <strong>hate</strong></p>
@@ -38,7 +39,7 @@
         </form>
     </main>
     <footer>
-        <p> &copy; 2024 CatFishApp - <a href="https://www.petmd.com/sites/default/files/cat"> CatFishApp </p>
+        <p> <small></small>&copy; 2024 CatFishApp - <a href="https://www.petmd.com/sites/default/files/cat"> CatFishApp </small></p>
     </footer>
     </body>
 </html>
