--- a/11hrs_Of_CSS/CSS/colors/index.html
+++ b/11hrs_Of_CSS/CSS/colors/index.html
@@ -1,1 +1,39 @@
-gg
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <h1>CSS Colors</h1>
+    </header>
+    <main>
+        <article>
+            <h2> Article 1
+            </h2>
+            <p class="one">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos.
+            </p>
+        </article>
+        <article>
+            <h2> Article 2
+            </h2>
+            <p class="two">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos.
+            </p>
+        </article>
+        <article>
+            <h2> Article 3
+            </h2>
+            <p class="three">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos.
+            </p>
+        </article>
+    </main>
+</body>
