css more  units

--- a/11hrs_Of_CSS/CSS/units/index.html
+++ b/11hrs_Of_CSS/CSS/units/index.html
@@ -1,1 +1,30 @@
-f
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <h1>CSS Units</h1>
+    </header>
+    <main>
+        <p>There are different units in css for expressing length.
+            Many CSS properties take "length" values, such as width, margin, padding, font-size, etc.
+            Length is a number followed by a length unit, such as 10px, 2em, etc.
+            they decide the size of everything on the page. most common is px, with default being 16px.
+            The percentage is relative for it's parent.Ie 25% if the parent is 50%
+            The rem is relative to the font-size of the root (webpage) not the parent.
+            Ie 2rem is 32px if the root is 16px
+            em is relative to the parent so it does the parent's font-size. it is normally used for others
+            like padding, margin incase of the button.
+            width is better as % than vw because vw causes a stroll bar at the bottom and that isn't pretty.
+            ch is relative to the character width of the "0" (zero) font-size.  Common for magazines.we have a certain with based on the chracter size &helps define columns
+
+        </p>
+        p*10>lorem              //to generate 10 paragraphs of lorem ipsum                                                  
+    </main>
+</body>
